app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import "normalize";
@import "bootstrap-sprockets";
@import "bootstrap";
@import "ataglance";

$primary-background: #ebedee;
$secondary-background: #fff;
$primary-font-color: #000000;
$link-font-color: #777;
$nav-link-color: #000;
$cta-color: #fff;

* {
  border-radius: 0 !important;
}

body {
  background: $primary-background;
  font-family: 'Open Sans', sans-serif;
  color: $primary-font-color;
}

html,
body {
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
}



/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto;
  /* Negative indent footer by its height */
  margin: 0 auto -30px;
  /* Pad bottom by footer height */
  padding: 0 0 60px;
}

// /* Set the fixed height of the footer here */
// .footer {
//   height: 30px;
// }

.navbar-header { min-height: 80px !important; }
.navbar { min-height: 80px !important; }
.navbar-brand { padding-top: 4px} // img positioning


#navbar-collapse-1 {
    padding-top: 10px;
    ul {
    padding-top: 5px;
    display: table-row;
      li {
        display: table-cell;
        float: none;
        vertical-align: middle;
        a {
          color: $nav-link-color;
        }
      }
    }
}

.emphasize-nav-link {
//  border: 1px solid red;
}

span.navbar-btn {
  padding: 0 15px;
}

.navbar-default {
  background-color: #FFFFFF;
  border-color: #000;
}

// .navbar-nav {
//   min-height: 80px !important;
//   li {
//     min-height: 80px !important;
//     padding-top: 0px !important;
//     padding-bottom: 0px !important;
//     a {
//       line-height: 80px;
//     }
//   }
// }

.img-logo {
// 72 px width - img needs to be cropped
}

.table {
  background: white;
}

.table-top-row {
  background: #f5f5f5;
}

a {
  color: $link-font-color;

  &:hover,
  &:focus {
    text-decoration: none;
    color: $primary-font-color;
  }

}
.logo-text {
    font-weight: 600;
    font-size: 20px;


}

a.dark {
  color: #FFFFFF;

  :hover {
    color: #DDDDDD;
  }
}

.center {
  text-align: center;
}

